--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
   font-family: Lucida sans unicode regular;
 }
 
-html, body, main {
+html,
+body,
+main {
   margin: 0;
   padding: 0;
   font-size: 1em;
@@ -32,7 +34,6 @@ tbody tr:hover {
   cursor: pointer;
   background-color: #CCC;
 }
-
 
 table tbody td {
   padding: 8px 0;
@@ -68,7 +69,8 @@ input {
   background-color: #FFF;
 }
 
-.erro, .ok {
+.erro,
+.ok {
   border: 1px solid rgba(0, 0, 0, .3);
   padding: 4px;
   margin-right: 2px;
